# ocadays2024-odoo-project-demo

./: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
odoo/addons/my_addon/: __init__.py  __manifest__.py
